--- a/app/src/main/res/layout/activity_accelerometer.xml
+++ b/app/src/main/res/layout/activity_accelerometer.xml
@@ -20,17 +20,17 @@
 
     <TextView
         android:id="@+id/yTextView"
-        android:layout_width="59dp"
-        android:layout_height="17dp"
-        android:text="TextView"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/zTextView"
